A little md file cleanup